--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home</title>
+    <title>My Bio</title>
     <!-- CSS Section -->
     <link rel="stylesheet" href="Content\css\bootstrap.min.css">
-    <link rel="stylesheet" href="Content\css\bootstrap-theme.min.css">
+    <!--<link rel="stylesheet" href="Content\css\bootstrap-theme.min.css">-->
     <link rel="stylesheet" href="Content\css\font-awesome.min.css">
     <link rel="stylesheet" href="Content\app.css">
 
@@ -15,27 +15,33 @@
 
 <body>
 
-    <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+    <nav class="navbar navbar-inverse" >
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
-                    aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-                <a class="navbar-brand" href="index.html"><i class="fa fa-tags fa-lg"></i> Lesson 3</a>
+                    aria-expanded="false">  
+                                     
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>                
+                    
+                </button>
+                <!--<a class="navbar-brand" href="index.html"><i class="fa fa-tags fa-lg"></i> Assignment 1</a>-->
+                <a class="navbar-brand" rel="home" href="#" title="Hina Patel">
+        <img style="width:40px; margin-top: -7px; background-color: #e3f2fd;"
+             src="Content\images\logo.jpg">
+    </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="index.html"><i class="fa fa-home fa-lg"></i> Home</a></li>
-                    <li><a href="projects.html"><i class="fa fa-th fa-lg"></i> Projects</a></li>
-                    <li><a href="about.html"><i class="fa fa-info-circle fa-lg"></i> About Me</a></li>
+                    <li class="active"><a href="index.html"><i class="fa fa-home fa-lg"></i> My Bio</a></li>          
+                    <li><a href="projects.html"><i class="fa fa-th fa-lg"></i> My Projects</a></li>
+                    <li><a href="contact.html"><i class="fa fa-info-circle fa-lg"></i> Contact Me</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
