moved images to Assets folder

--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-                <a class="navbar-brand"><img style="width:40px; margin-top: -7px; background-color: #e3f2fd;" src="Content\images\logo.jpg"></i></a>
+                <a class="navbar-brand"><img style="width:40px; margin-top: -7px; background-color: #e3f2fd;" src="Assets\logo.jpg"></i></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -49,8 +49,8 @@
         
         <div class="row" style="border: 1px solid black">
             <div class="col-xs-6 col-sm-3" style="background-color:#e3f2fd;">
-            <img style="width:300px; margin-top: -7px; background-color: #e3f2fd;" src="Content\images\CIBC_750_Lawrence.jpg">
-            <address id="work_address" class="text-center" ></address>                
+            <img style="width:300px; margin-top: -7px; background-color: #e3f2fd;" src="Assets\CIBC_750_Lawrence.jpg">
+            <address class="text-center" ><strong> CIBC </strong> - 750 - Lawerence Avenue W., Toronto</address>                
             </div>
             
             <div class="col-xs-6 col-sm-3" style="background-color:#ffffff;">
