--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-                <a class="navbar-brand" ><img style="width:40px; margin-top: -7px; background-color: #e3f2fd;" src="Content\images\logo.jpg"></i></a>
+                <a class="navbar-brand" ><img style="width:40px; margin-top: -7px; background-color: #e3f2fd;" src="Assets\logo.jpg"></i></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
