--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-                <a class="navbar-brand" ><img style="width:40px; margin-top: -7px; background-color: #e3f2fd;" src="Content\images\logo.jpg"></i></a>
+                <a class="navbar-brand" ><img style="width:40px; margin-top: -7px; background-color: #e3f2fd;" src="Assets\logo.jpg"></i></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -52,7 +52,7 @@
         <div class="row"> 
                       
             <div class="col-md-4">
-                <img style="width:300px; margin-top: -7px; background-color: #e3f2fd;" src="Content\images\profile_pic.jpg">
+                <img style="width:300px; margin-top: -7px; background-color: #e3f2fd;" src="Assets\profile_pic.jpg">
             </div>
             
             <div class="col-md-offset-4">
@@ -73,7 +73,7 @@
                 </br>
                 </br>
             <div class="col-md-4">
-                <img style="width:110px; margin-top: -7px; background-color: #e3f2fd;" src="Content\images\logo.jpg">
+                <img style="width:110px; margin-top: -7px; background-color: #e3f2fd;" src="Assets\logo.jpg">
                 <h3 id="name"> </h3>
             </div>
         </div>
