--- a/contact.html
+++ b/contact.html
@@ -84,8 +84,8 @@
 
                         <div class="form-group">
                             <div class="col-lg-offset-9">
-                                <a id="cancelButton" href="index.html" class="btn btn-warning">Cancel</a>
-                                <button id="sendButton" href="index.html" class="btn btn-primary">Send</button>
+                                <a id="cancelButton" class="btn btn-warning">Cancel</a>
+                                <a id="sendButton" href="index.html" class="btn btn-primary">Send</a>
                             </div>
                         </div>
                     </fieldset>
